crates/analyzer-surface/src/lower/snapshots/analyzer_surface__lower__tests__expressions.snap
---
source: crates/analyzer-surface/src/lower/tests.rs
expression: expressions
---
[
    Application(
        Idx::<Expr>(0),
        [
            Idx::<Expr>(1),
        ],
    ),
    Constructor(
        Qualified {
            prefix: None,
            value: Name(
                "Constructor",
            ),
        },
    ),
    Constructor(
        Qualified {
            prefix: Some(
                ModuleName(
                    "A",
                ),
            ),
            value: Name(
                "Constructor",
            ),
        },
    ),
    Lambda(
        [
            Idx::<Binder>(0),
            Idx::<Binder>(1),
        ],
        Idx::<Expr>(5),
    ),
    LetIn(
        [
            Name {
                id: Idx::<LetName>(0),
            },
        ],
        Idx::<Expr>(8),
    ),
    Literal(
        Int(
            0,
        ),
    ),
    Literal(
        Number(
            "0.0",
        ),
    ),
    Literal(
        Char(
            "'a'",
        ),
    ),
    Literal(
        String(
            "\"hello\"",
        ),
    ),
    Literal(
        Array(
            [
                Idx::<Expr>(14),
                Idx::<Expr>(15),
            ],
        ),
    ),
    Literal(
        Record(
            [
                RecordField(
                    Name(
                        "a",
                    ),
                    Idx::<Expr>(17),
                ),
                RecordPun(
                    Name(
                        "b",
                    ),
                ),
            ],
        ),
    ),
    Variable(
        Qualified {
            prefix: None,
            value: Name(
                "a",
            ),
        },
    ),
    Variable(
        Qualified {
            prefix: Some(
                ModuleName(
                    "A",
                ),
            ),
            value: Name(
                "a",
            ),
        },
    ),
]
