crates/analyzer-surface/src/lower/snapshots/analyzer_surface__lower__tests__module_imports.snap
---
source: crates/analyzer-surface/src/lower/tests.rs
expression: surface.imports
---
ModuleImports {
    declarations: [
        ImportDeclaration {
            name: ModuleName(
                "Lib",
            ),
            qualified_as: None,
            import_list: None,
        },
        ImportDeclaration {
            name: ModuleName(
                "Lib",
            ),
            qualified_as: Some(
                ModuleName(
                    "Qualified",
                ),
            ),
            import_list: None,
        },
        ImportDeclaration {
            name: ModuleName(
                "Lib",
            ),
            qualified_as: None,
            import_list: Some(
                ImportList {
                    items: [
                        ImportType(
                            Name(
                                "Type",
                            ),
                            None,
                        ),
                        ImportType(
                            Name(
                                "Data",
                            ),
                            Some(
                                DataAll,
                            ),
                        ),
                        ImportType(
                            Name(
                                "List",
                            ),
                            Some(
                                DataEnumerated(
                                    [
                                        Name(
                                            "Cons",
                                        ),
                                        Name(
                                            "List",
                                        ),
                                    ],
                                ),
                            ),
                        ),
                        ImportValue(
                            Name(
                                "value",
                            ),
                        ),
                        ImportClass(
                            Name(
                                "Class",
                            ),
                        ),
                    ],
                    hiding: false,
                },
            ),
        },
        ImportDeclaration {
            name: ModuleName(
                "Lib",
            ),
            qualified_as: Some(
                ModuleName(
                    "Qualified",
                ),
            ),
            import_list: Some(
                ImportList {
                    items: [
                        ImportType(
                            Name(
                                "Type",
                            ),
                            None,
                        ),
                        ImportType(
                            Name(
                                "Data",
                            ),
                            Some(
                                DataAll,
                            ),
                        ),
                        ImportType(
                            Name(
                                "List",
                            ),
                            Some(
                                DataEnumerated(
                                    [
                                        Name(
                                            "Cons",
                                        ),
                                        Name(
                                            "List",
                                        ),
                                    ],
                                ),
                            ),
                        ),
                        ImportValue(
                            Name(
                                "value",
                            ),
                        ),
                        ImportClass(
                            Name(
                                "Class",
                            ),
                        ),
                    ],
                    hiding: false,
                },
            ),
        },
        ImportDeclaration {
            name: ModuleName(
                "Lib",
            ),
            qualified_as: None,
            import_list: Some(
                ImportList {
                    items: [
                        ImportType(
                            Name(
                                "Type",
                            ),
                            None,
                        ),
                        ImportType(
                            Name(
                                "Data",
                            ),
                            Some(
                                DataAll,
                            ),
                        ),
                        ImportType(
                            Name(
                                "List",
                            ),
                            Some(
                                DataEnumerated(
                                    [
                                        Name(
                                            "Cons",
                                        ),
                                        Name(
                                            "List",
                                        ),
                                    ],
                                ),
                            ),
                        ),
                        ImportValue(
                            Name(
                                "value",
                            ),
                        ),
                        ImportClass(
                            Name(
                                "Class",
                            ),
                        ),
                    ],
                    hiding: true,
                },
            ),
        },
        ImportDeclaration {
            name: ModuleName(
                "Lib",
            ),
            qualified_as: Some(
                ModuleName(
                    "Qualified",
                ),
            ),
            import_list: Some(
                ImportList {
                    items: [
                        ImportType(
                            Name(
                                "Type",
                            ),
                            None,
                        ),
                        ImportType(
                            Name(
                                "Data",
                            ),
                            Some(
                                DataAll,
                            ),
                        ),
                        ImportType(
                            Name(
                                "List",
                            ),
                            Some(
                                DataEnumerated(
                                    [
                                        Name(
                                            "Cons",
                                        ),
                                        Name(
                                            "List",
                                        ),
                                    ],
                                ),
                            ),
                        ),
                        ImportValue(
                            Name(
                                "value",
                            ),
                        ),
                        ImportClass(
                            Name(
                                "Class",
                            ),
                        ),
                    ],
                    hiding: true,
                },
            ),
        },
    ],
}
