crates/analyzer-surface/src/lower/snapshots/analyzer_surface__lower__tests__module_some_export_list.snap
---
source: crates/analyzer-surface/src/lower/tests.rs
expression: surface.header.export_list
---
Some(
    ExportList {
        items: [
            ExportType(
                Name(
                    "Type",
                ),
                None,
            ),
            ExportType(
                Name(
                    "Data",
                ),
                Some(
                    DataAll,
                ),
            ),
            ExportType(
                Name(
                    "List",
                ),
                Some(
                    DataEnumerated(
                        [
                            Name(
                                "Cons",
                            ),
                            Name(
                                "List",
                            ),
                        ],
                    ),
                ),
            ),
            ExportValue(
                Name(
                    "value",
                ),
            ),
            ExportClass(
                Name(
                    "Class",
                ),
            ),
        ],
    },
)
