crates/analyzer-surface/src/lower/snapshots/analyzer_surface__lower__tests__none-export-list.purs.snap
---
source: crates/analyzer-surface/src/lower/tests.rs
expression: "(surface, expressions, let_names, binders, types)"
---
(
    Module {
        header: ModuleHeader {
            name: ModuleName(
                "Main",
            ),
            export_list: None,
        },
        imports: ModuleImports {
            declarations: [],
        },
        body: ModuleBody {
            declarations: [],
            class_declarations: {},
            data_declarations: {},
            value_declarations: {},
        },
    },
    [],
    [],
    [],
    [],
)
