crates/analyzer-surface/src/lower/snapshots/analyzer_surface__lower__tests__operator-name.purs.snap
---
source: crates/analyzer-surface/src/lower/tests.rs
expression: "(surface, expressions, let_names, binders, types)"
---
(
    Module {
        header: ModuleHeader {
            name: ModuleName(
                "Main",
            ),
            export_list: None,
        },
        imports: ModuleImports {
            declarations: [],
        },
        body: ModuleBody {
            declarations: [
                ValueDeclaration(
                    ValueDeclaration {
                        id: Idx::<ValueGroup>(0),
                        name: Name(
                            "expr",
                        ),
                        annotation: None,
                        equations: [
                            ValueEquation {
                                binders: [],
                                binding: Unconditional {
                                    where_expr: WhereExpr {
                                        expr_id: Idx::<Expr>(0),
                                        let_bindings: [],
                                    },
                                },
                            },
                        ],
                    },
                ),
                ValueDeclaration(
                    ValueDeclaration {
                        id: Idx::<ValueGroup>(1),
                        name: Name(
                            "ty",
                        ),
                        annotation: Some(
                            Idx::<Type>(0),
                        ),
                        equations: [],
                    },
                ),
            ],
            class_declarations: {},
            data_declarations: {},
            value_declarations: {
                Idx::<ValueGroup>(0): 0,
                Idx::<ValueGroup>(1): 1,
            },
        },
    },
    [
        Variable(
            Qualified {
                prefix: None,
                value: Name(
                    "+",
                ),
            },
        ),
    ],
    [],
    [],
    [
        Constructor(
            Qualified {
                prefix: None,
                value: Name(
                    "+",
                ),
            },
        ),
    ],
)
